--- a/styles.css
+++ b/styles.css
@@ -47,6 +47,30 @@ a, a:hover, a:visited {
     color: #34b8e6;
     text-decoration: none;
 }
+.topline {
+    background-color: #34b8e6;
+    text-align: center;
+    color: white;
+    padding-top: 10px;
+    margin-top: 20px;
+}
+.toplinegrid {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 5px;
+    align-items: center;
+    justify-content: center;
+}
+.topitem {
+    padding: 15px;
+    color: white;
+}
+.highlight {
+    font-size: 1.4em;
+}
+.highlight a {
+    color: white;
+}
 .header {
     background-image: url("./assets/Sunrise_cropped.jpg");
     background-color: white;
@@ -79,7 +103,7 @@ a, a:hover, a:visited {
     margin: auto;
 }
 .picture img {
-    width: 70%;
+    width: 100%;
     height: auto;
     margin: auto;
 }
@@ -123,10 +147,6 @@ button {
     background-color: #34b8e6;
     color: white;
     padding: 15px;
-    position: fixed;
-    left: 0;
-    bottom: 0;
-    width: 100%;
 }
 
 @media only screen and (max-width: 900px) {
@@ -136,5 +156,9 @@ button {
 .contact {
     width: 90vw;
         margin-bottom: 25px;
+}
+.toplinegrid {
+    display: grid;
+    grid-template-columns: 1fr;
 }
 }
