--- a/styles copy.css
+++ b/styles copy.css
@@ -1,6 +1,6 @@
 
 p, li, input, textarea {
-  font-family: "Forum", serif;
+  font-family: "Roboto", sans-serif;
   font-optical-sizing: auto;
   font-weight: 300;
   font-style: normal;
@@ -13,14 +13,14 @@ ul {
 h1 {
   font-family: "Quicksand", sans-serif;
   font-optical-sizing: auto;
-  font-size: 3em;
+  font-size: 2.5em;
   font-weight: 500;
   font-style: normal;
   padding-top: 15px;
   padding-bottom: 20px;
 }
 h2 {
-  font-family: "Forum", serif;
+  font-family: "Roboto", sans-serif;
   font-optical-sizing: auto;
   font-size: 1.6em;
   font-weight: 500;
@@ -28,7 +28,7 @@ h2 {
   padding-bottom: 15px;
 }
 h3 {
-  font-family: "Forum", serif;
+  font-family: "Quicksand", sans-serif;
   font-optical-sizing: auto;
   font-size: 1.8em;
   font-weight: 500;
@@ -40,20 +40,6 @@ margin: 0px;
 padding: 0px;
 box-sizing: border-box;
 }
-.container {
-    background-color: #34b8e6;
-}
-.content {
-    text-align: center;
-    color: white;
-    padding: 25px;
-}
-.contentwit {
-    text-align: center;
-    color: #34b8e6;
-    background-color: white;
-    padding: 25px;
-}
 img {
     display: block;
 }
@@ -62,26 +48,28 @@ a, a:hover, a:visited {
     text-decoration: none;
 }
 .topline {
-    background-color: white;
+    background-color: #34b8e6;
     text-align: center;
-    color: #34b8e6;
-    margin: 15px;
+    color: white;
+    padding-top: 10px;
+    margin-top: 20px;
 }
 .toplinegrid {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
+    gap: 5px;
     align-items: center;
     justify-content: center;
 }
 .topitem {
-    /* padding: 15px; */
-    color: #34b8e6
+    padding: 15px;
+    color: white;
 }
 .highlight {
     font-size: 1.4em;
 }
 .highlight a {
-    color: #34b8e6;
+    color: white;
 }
 .header {
     background-image: url("./assets/Sunrise_cropped.jpg");
@@ -97,23 +85,22 @@ a, a:hover, a:visited {
     margin: auto;
     background-color: rgba(255, 255, 255, 0.64);
 }
-
+.container {
+    margin: 25px;
+}
+.content {
+    text-align: center;
+}
 .twocolumns {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    /* gap: 20px;
-    margin: 25px; */
+    gap: 20px;
+    margin: 25px;
 }
 .column {
+    padding: 15px;
     justify-content: center;
     margin: auto;
-    color: white;
-}
-.columntext {
-    justify-content: center;
-    margin: auto;
-    color: white;
-    padding: 25px;
 }
 .picture img {
     width: 100%;
@@ -146,7 +133,6 @@ textarea {
     width: 60vw;
     margin-top: 35px;
     margin-bottom: 100px;
-    color: #34b8e6;
 }
 button {
     border: none;
@@ -155,7 +141,6 @@ button {
     cursor: pointer;
     border: 1px solid #34b8e6;
     border-radius: 5px;
-    color: white;
 }
 .page-footer {
     text-align: center;
